# passman

./: Cargo.toml  LICENSE  README.md
src/: app.rs  clap.yml  crypt.rs  main.rs  ui.rs  utils.rs
src/subcmd/: emit_plaintext.rs  from_plaintext.rs  mod.rs  new.rs  update.rs
src/version/: errors.rs  latest.rs  mod.rs  v0_2.rs  v0_3.rs  v0_4.rs
