[package]
name = "passman"
version = "0.3.0"
authors = ["sharnoff <github@max.sharnoff.org>"]
edition = "2018"
description = "A simple terminal-based password manager"
readme = "README.md"

[dependencies]
argon2 = "0.2"
base64 = "0.12"
rand = "0.7"
rand_core = { version = "0.6", features = ["std"] }
aes-soft = "0.3"
block-modes = "0.3"
sha2 = "0.8"
clap = "3.0.0-beta.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
fuzzy-matcher = "0.3"
chrono = "0.4"
signal-hook = "0.1"
termion = "1.5"
textwrap = "0.12"
tui = "0.10.0"
rpassword = "5.0"


[profile.release]
panic = "abort"
