[package]
name = "passman"
version = "0.3.0"
authors = ["sharnoff <github@max.sharnoff.org>"]
edition = "2021"
description = "A simple terminal-based password manager"
readme = "README.md"

[dependencies]
argon2 = "0.3"
base64 = "0.13"
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
aes = "0.7"
block-modes = "0.8"
sha2 = "0.9"
clap = { version = "3.0.10", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
thiserror = "1.0.30"
fuzzy-matcher = "0.3"
chrono = "0.4"
signal-hook = "0.3"
termion = "1.5"
textwrap = "0.14"
tui = "0.16.0"
rpassword = "5.0"
google-authenticator = "0.3"
lazy_static = "1.4.0"


[profile.release]
panic = "abort"
