[package]
name = "passman"
version = "0.4.0"
authors = ["sharnoff <github@max.sharnoff.org>"]
edition = "2021"
description = "A simple terminal-based password manager"
readme = "README.md"

[dependencies]
aes = "0.7"
argon2 = "0.3"
base64 = "0.13"
block-modes = "0.8"
chrono = "0.4"
clap = { version = "3.0.10", features = ["derive"] }
fuzzy-matcher = "0.3"
google-authenticator = "0.3"
lazy_static = "1.4.0"
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
rpassword = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
sha2 = "0.9"
signal-hook = "0.3"
termion = "1.5"
textwrap = "0.14"
thiserror = "1.0.30"
tui = "0.16.0"


[profile.release]
panic = "abort"
